<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".activity.AddressActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNumber"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPinCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pin_code" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userHouseNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/house_no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userVillage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/village" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userLandMark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/landmark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/proceedAdOneBt"
            android:textAllCaps="false"
            android:text="@string/proceed_to_order"
            android:textColor="@color/white" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Or enter new address"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameAl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNumberAl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPinCodeAl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pin_code" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userHouseNoAl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/house_no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userVillageAl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/village" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userLandMarkAl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/landmark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userCityAl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userStateAl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/proceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/proceed_to_order"
            android:textAllCaps="false"
             />
    </LinearLayout>
</ScrollView>